--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gitbook-cli": "^2.3.2",
     "graceful-fs": "^4.2.8",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
