--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
+    "@react-icons/all-files": "^4.1.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.23.1",
     "@sanity/image-url": "^1.0.1",
