--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.37.5",
     "styled-components": "^5.3.3",
     "use-local-storage": "^2.2.5",
     "web-vitals": "^1.0.1"
