--- a/portfolioblog/package.json
+++ b/portfolioblog/package.json
@@ -2,7 +2,7 @@
   "name": "portfolioblog",
   "private": true,
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app)",
+  "description": "",
   "main": "package.json",
   "author": "David Chen <chuwei.chen2001@gmail.com>",
   "license": "UNLICENSED",
@@ -14,12 +14,12 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.23.1",
-    "@sanity/core": "^2.23.1",
-    "@sanity/default-layout": "^2.23.1",
-    "@sanity/default-login": "^2.23.1",
-    "@sanity/desk-tool": "^2.23.1",
-    "@sanity/vision": "^2.23.1",
+    "@sanity/base": "^2.23.2",
+    "@sanity/core": "^2.23.2",
+    "@sanity/default-layout": "^2.23.2",
+    "@sanity/default-login": "^2.23.2",
+    "@sanity/desk-tool": "^2.23.2",
+    "@sanity/vision": "^2.23.2",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
@@ -28,6 +28,6 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://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@github.com/Dioceus/portfolio"
+    "url": "https://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@github.com/Dioceus/portfolio.git"
   }
 }
