--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dotenv": "^10.0.0",
     "gitbook": "^2.6.9",
     "gitbook-cli": "^2.3.2",
     "graceful-fs": "^4.2.8",
