--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gitbook": "^2.6.9",
     "gitbook-cli": "^2.3.2",
     "graceful-fs": "^4.2.8",
+    "groq": "^2.15.0",
+    "markdown-to-jsx": "^7.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
