--- a/portfolioblog/package.json
+++ b/portfolioblog/package.json
@@ -28,6 +28,6 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://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@github.com/Dioceus/portfolio.git"
+    "url": "https://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@github.com/davidchen2001/davidchen2001.github.io.git"
   }
 }
