--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.37.5",
+    "react-wavify": "^1.5.4",
     "styled-components": "^5.3.3",
     "use-local-storage": "^2.2.5",
     "web-vitals": "^1.0.1"
